--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -37,7 +37,7 @@
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:backgroundTint="@color/white"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/button_pressed_center"
             />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             app:passwordToggleEnabled="true"
             android:backgroundTint="@color/white"
-            android:textColorHint="@color/white">
+            android:textColorHint="@color/button_pressed_center">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tiet_password"
