--- a/app/src/main/res/layout/fragment_register_step_2.xml
+++ b/app/src/main/res/layout/fragment_register_step_2.xml
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/first_name"
                 android:backgroundTint="@color/white"
-                android:textColorHint="@color/white"
+                android:textColorHint="@color/button_pressed_center"
                 android:inputType="textPersonName">
         </com.google.android.material.textfield.TextInputEditText>
 
@@ -55,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/last_name"
                 android:backgroundTint="@color/white"
-                android:textColorHint="@color/white"
+                android:textColorHint="@color/button_pressed_start"
                 android:inputType="textPersonName">
         </com.google.android.material.textfield.TextInputEditText>
 
