--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="button_selected">#BC6D5751</color>
     <color name="green">#4CAF50</color>
     <color name="c62828">#C62828</color>
+    <color name="brown">#713B27</color>
 </resources>
