Am rezolvat diferite bug-uri.

--- a/app/src/main/res/navigation/navigation_profile.xml
+++ b/app/src/main/res/navigation/navigation_profile.xml
@@ -60,6 +60,9 @@
         <action
             android:id="@+id/action_settingsFragment_to_dashboardFragment"
             app:destination="@id/dashboardFragment" />
+        <action
+            android:id="@+id/action_settingsFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
     </fragment>
 
     <fragment
