--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login"
-        android:textSize="24sp"
+        android:textSize="@dimen/text_size_title"
         android:textColor="@color/button_primary_start"
         app:layout_constraintVertical_bias="0.1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -18,71 +18,99 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/LinearLayout"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/content_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/default_space"
+        android:layout_marginStart="@dimen/default_space"
+        android:layout_marginEnd="@dimen/default_space"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_title"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.15">
-
-        <EditText
-            android:id="@+id/et_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/email"
-            android:inputType="textEmailAddress"
-            android:backgroundTint="@color/white"
-            android:textColorHint="@color/button_pressed_center"
-            />
+        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintWidth_max="@dimen/max_content_width"
+        app:layout_constraintWidth_percent="0.85">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
+            android:id="@+id/email_input_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/medium_space"
+            app:boxBackgroundColor="@color/white"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <EditText
+                android:id="@+id/et_email"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/input_height"
+                android:hint="@string/email"
+                android:inputType="textEmailAddress"
+                android:padding="@dimen/input_padding"
+                android:textColor="@color/black"
+                android:textColorHint="@color/button_pressed_center"
+                android:textSize="@dimen/text_size_normal" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/password_input_layout"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:passwordToggleEnabled="true"
-            android:backgroundTint="@color/white"
-            android:textColorHint="@color/button_pressed_center">
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/email_input_layout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tiet_password"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/input_height"
                 android:hint="@string/password"
-                android:inputType="textPassword"/>
+                android:inputType="textPassword"
+                android:padding="@dimen/input_padding"
+                android:textColor="@color/black"
+                android:textColorHint="@color/button_pressed_center"
+                android:textSize="@dimen/text_size_normal" />
         </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:id="@+id/buttons_layout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
+        android:layout_marginBottom="@dimen/large_space"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.75"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title">
+        app:layout_constraintStart_toStartOf="parent">
+
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_max_width"
+            android:layout_height="@dimen/button_height_large"
             android:text="@string/do_login"
             android:id="@+id/btn_do_login"
             android:background="@drawable/button_selector"
             app:backgroundTint="@null"
             android:textColor="@color/white"
+            android:textSize="@dimen/text_size_subtitle"
+            android:layout_marginBottom="@dimen/medium_space"
             style="@null" />
+
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_max_width"
+            android:layout_height="@dimen/button_height_normal"
             android:id="@+id/btn_go_to_register"
             android:text="@string/go_to_register"
+            android:background="@drawable/button_selector"
             app:backgroundTint="@null"
-                android:background="@drawable/button_selector"
-                android:textColor="@color/button_text_color"/>
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_normal"
+            style="@null" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
